<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/outer_layout_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/app_name"
            android:id="@+id/appNameTextView"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            android:id="@+id/infoVersionTextView"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_license"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/infoLicenseTextView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_source"
            android:autoLink="web"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/infoSourceTextView"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/box_margins">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/info_instructions_title"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/info_instructions"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_seeds_title"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"
                android:id="@+id/textView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_seeds"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/textView9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_back"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/backButton"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>