<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_box">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seed_dialog_title"
        android:textSize="@dimen/large_text_size"
        android:id="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seed_dialog_edittext_prefix"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seedEditText"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seed_dialog_cancel"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/cancelStartGameFromSeedButton" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seed_dialog_start"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/startGameFromSeedButton" />
    </LinearLayout>

</LinearLayout>