<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/outer_layout_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/app_name"
            android:id="@+id/textView3"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_settings"
            android:textSize="@dimen/medium_text_size"
            android:id="@+id/settingsTextView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="Number of Colors"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/numColorsSpinner" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="Board Size"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/boardSizeSpinner" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_color_blind"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/colorBlindCheckBox" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_old_colors"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/oldColorsCheckBox" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_clear_high_scores_button"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/clearHighScoresButton" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/applyButton" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>